--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,9 +4,7 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+Introduction to Economics 
+======
+* Undergraduate course, Spring 2021
+  * Tutor: 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics. 
