--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,5 +4,10 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-Introduction to Economics                                      (Undergraduate course, Spring 2021)
-Tutor: 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics. 
+
+{% include base_path %}
+
+Introduction to Economics
+======
+*(Undergraduate course, Spring 2021)
+*Tutor: 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics. 
