--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,9 +5,6 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
 
-Introduction to Economics
-======
-*(Undergraduate course, Spring 2021)
-*Tutor: 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics. 
+
+Introduction to Economics (Undergraduate course, Spring 2021): 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics. 
