--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,7 @@ author_profile: true
 
 
 
-Introduction to Economics (Undergraduate course, Spring 2021): 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics.
+-Introduction to Economics (Undergraduate course, Spring 2021): 2 weekly classes where I tought how to solve problem sets and the basic mathematical aspects of Economics.
 
-Macroeconomics (Undergraduate course, Fall 2021): 2 weekly classes where I teach how to solve problem sets and understand basic macroeconomic models. I also design problem sets, mostly focused on dealing with data relevant for macroeconomic analysis.
+-Macroeconomics (Undergraduate course, Fall 2021): 2 weekly classes where I teach how to solve problem sets and understand basic macroeconomic models. 
+I also design problem sets, mostly focused on dealing with data relevant for macroeconomic analysis.
